--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <section id="new">
 <h2>更新情報・お知らせ</h2>
 <dl>
-<dt>2024/03/??</dt>
+<dt>2024/05/09</dt>
 <dd><a href="log.html">「コネクトフェス vol.2」に参加しました。</a><span class="newicon">NEW</span></dd>
-<dt>2019/02/25</dt>
+<!-- <dt>2019/02/25</dt>
 <dd>html,cssなど全面リニューアル。旧ファイルが必要な場合はお問い合わせ下さい。</dd>
 <dt>2014/09/05</dt>
 <dd>tp_simple7配布開始。</dd>
@@ -55,7 +55,7 @@
 <dt>20XX/00/00</dt>
 <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
 <dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
+<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
 </dl>
 <p class="r">&raquo;&nbsp;<a href="#">過去ログ</a></p>
 </section>
