--- a/link.html
+++ b/link.html
@@ -40,18 +40,18 @@
 <tr>
 <th><a href="https://twitter.com/vonaro131605"><img src="images/1.jpg" alt=""><br>
 旧BONARO</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<td>今は運営しておりません。</td>
 </tr>
 <tr>
 <th><a href="https://x.com/AIRobotics2024?t=QoK_lAdc2GKObeGoOHlmrw&s=09"><img src="images/2.jpg" alt=""><br>
 エーアイロボティクス</a></th>
 <td><img src="images/X_qr.png"></td>
 </tr>
-<tr>
+<!-- <tr>
 <th><a href="#"><img src="images/3.jpg" alt=""><br>
 サイト名</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
-</tr>
+</tr> -->
 </table>
 
 </section>
