--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>AIロボティクス</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
-<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/openclose.js"></script>
-<script src="js/fixmenu_pagetop.js"></script>
-<!--[if lt IE 9]>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>エーアイロボティクス</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="ここにサイト説明を入れます">
+	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/openclose.js"></script>
+	<script src="js/fixmenu_pagetop.js"></script>
+	<!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
@@ -18,29 +19,29 @@
 
 <body>
 
-<div id="container">
+	<div id="container">
 
-<header>
-<h1 id="logo"><a href="index.html"><img src="images/ai_logo.png" alt="SAMPLE WEB SITE"></a></h1>
-<!--スライドショー-->
-<aside id="mainimg">
-<img src="images/1.jpg" alt="" class="slide0">
-<img src="images/1.jpg" alt="" class="slide1">
-<img src="images/2.jpg" alt="" class="slide2">
-<img src="images/3.jpg" alt="" class="slide3">
-</aside>
-</header>
+		<header>
+			<h1 id="logo"><a href="index.html"><img src="images/ai_logo.png" alt="SAMPLE WEB SITE"></a></h1>
+			<!--スライドショー-->
+			<aside id="mainimg">
+				<img src="images/1.jpg" alt="" class="slide0">
+				<img src="images/1.jpg" alt="" class="slide1">
+				<img src="images/2.jpg" alt="" class="slide2">
+				<img src="images/3.jpg" alt="" class="slide3">
+			</aside>
+		</header>
 
-<div id="contents">
+		<div id="contents">
 
-<div id="main">
+			<div id="main">
 
-<section id="new">
-<h2>更新情報・お知らせ</h2>
-<dl>
-<dt>2024/05/09</dt>
-<dd><a href="log.html">「コネクトフェス vol.2」に参加しました。</a><span class="newicon">NEW</span></dd>
-<!-- <dt>2019/02/25</dt>
+				<section id="new">
+					<h2>更新情報・お知らせ</h2>
+					<dl>
+						<dt>2024/05/09</dt>
+						<dd><a href="log.html">「コネクトフェス vol.2」に参加しました。</a><span class="newicon">NEW</span></dd>
+						<!-- <dt>2019/02/25</dt>
 <dd>html,cssなど全面リニューアル。旧ファイルが必要な場合はお問い合わせ下さい。</dd>
 <dt>2014/09/05</dt>
 <dd>tp_simple7配布開始。</dd>
@@ -56,87 +57,93 @@
 <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
 <dt>20XX/00/00</dt>
 <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
-</dl>
-<p class="r">&raquo;&nbsp;<a href="#">過去ログ</a></p>
-</section>
+					</dl>
+					<p class="r">&raquo;&nbsp;<a href="#">過去ログ</a></p>
+				</section>
 
-<section>
+				<section>
 
-<h2>テンプレートのご利用前に必ずお読み下さい</h2>
+					<h2>テンプレートのご利用前に必ずお読み下さい</h2>
 
-<h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『個人サイト向けシンプル無料ホームページテンプレート tp_simple7』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
-<p><strong class="color1">■HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</strong><br>
-わざと見えなく加工する事も禁止です。</p>
-<p><strong class="color1">■下部の著作を外したい場合は</strong><br>
-<a href="https://template-party.com/">Template-Party</a>の<a href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
+					<h3>利用規約のご案内</h3>
+					<p>このテンプレートは、<a href="https://template-party.com/">Template
+							Party</a>にて無料配布している『個人サイト向けシンプル無料ホームページテンプレート tp_simple7』です。必ずダウンロード先のサイトの<a
+							href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
+					<p><strong class="color1">■HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</strong><br>
+						わざと見えなく加工する事も禁止です。</p>
+					<p><strong class="color1">■下部の著作を外したい場合は</strong><br>
+						<a href="https://template-party.com/">Template-Party</a>の<a
+							href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
 
-<h3>テンプレートに梱包されているjavascriptファイル（jsファイル）について</h3>
-<p>当テンプレートに梱包されている、fixmenu_pagetop.js、openclose.jsは、<a href="https://www.crytus.info/" target="_blank">クリタス様</a>提供のものです。これらのファイルは改変せずにご利用下さい。<br>
-また、当サイトのテンプレート「以外」に使いたいなど、「プログラムのみ」を使う場合は<a href="https://template-party.com/free_program/openclose_license.html">こちらの規約</a>をお守り下さい。</p>
+					<h3>テンプレートに梱包されているjavascriptファイル（jsファイル）について</h3>
+					<p>当テンプレートに梱包されている、fixmenu_pagetop.js、openclose.jsは、<a href="https://www.crytus.info/"
+							target="_blank">クリタス様</a>提供のものです。これらのファイルは改変せずにご利用下さい。<br>
+						また、当サイトのテンプレート「以外」に使いたいなど、「プログラムのみ」を使う場合は<a
+							href="https://template-party.com/free_program/openclose_license.html">こちらの規約</a>をお守り下さい。</p>
 
-<h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="about.html">こちらをご覧下さい。</a></p>
+					<h3>当テンプレートの詳しい使い方は</h3>
+					<p><a href="about.html">こちらをご覧下さい。</a></p>
 
-</section>
+				</section>
 
-</div>
-<!--/#main-->
+			</div>
+			<!--/#main-->
 
-<div id="sub">
+			<div id="sub">
 
-<!--PC用（801px以上端末）メニュー-->
-<nav id="menubar">
-<h2>Contents</h2>
-<ul>
-<li><a href="index.html">HOME</a></li>
-<li><a href="about.html">ABOUT</a></li>
-<li><a href="gallery.html">GALLERY</a></li>
-<li><a href="link.html">LINK</a></li>
-</ul>
-</nav>
+				<!--PC用（801px以上端末）メニュー-->
+				<nav id="menubar">
+					<h2>Contents</h2>
+					<ul>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="about.html">ABOUT</a></li>
+						<li><a href="gallery.html">GALLERY</a></li>
+						<li><a href="link.html">LINK</a></li>
+					</ul>
+				</nav>
 
-<p><a href="#"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
-<a href="#"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a></p>
-<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
-<a href="about.html#banner">詳しい説明はこちら。</a></p>
+				<p><a href="#"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
+					<a href="#"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a></p>
+				<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
+					<a href="about.html#banner">詳しい説明はこちら。</a></p>
 
-</div>
-<!--/#sub-->
+			</div>
+			<!--/#sub-->
 
-</div>
-<!--/#contents-->
+		</div>
+		<!--/#contents-->
 
-</div>
-<!--/#container-->
+	</div>
+	<!--/#container-->
 
-<footer>
-<small>Copyright&copy; <a href="index.html">SAMPLE WEB SITE</a> All Rights Reserved.</small>
-<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
-</footer>
+	<footer>
+		<small>Copyright&copy; <a href="index.html">SAMPLE WEB SITE</a> All Rights Reserved.</small>
+		<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+	</footer>
 
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-<li><a href="index.html">HOME</a></li>
-<li><a href="about.html">ABOUT</a></li>
-<li><a href="gallery.html">GALLERY</a></li>
-<li><a href="link.html">LINK</a></li>
-</ul>
-</nav>
+	<!--小さな端末用（800px以下端末）メニュー-->
+	<nav id="menubar-s">
+		<ul>
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="gallery.html">GALLERY</a></li>
+			<li><a href="link.html">LINK</a></li>
+		</ul>
+	</nav>
 
-<!--ページの上部に戻る「↑」ボタン-->
-<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
+	<!--ページの上部に戻る「↑」ボタン-->
+	<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
 
-<!--メニュー開閉ボタン-->
-<div id="menubar_hdr" class="close"></div>
+	<!--メニュー開閉ボタン-->
+	<div id="menubar_hdr" class="close"></div>
 
-<!--メニューの開閉処理条件設定　800px以下-->
-<script>
-if (OCwindowWidth() <= 800) {
-	open_close("menubar_hdr", "menubar-s");
-}
-</script>
+	<!--メニューの開閉処理条件設定　800px以下-->
+	<script>
+		if (OCwindowWidth() <= 800) {
+			open_close("menubar_hdr", "menubar-s");
+		}
+	</script>
 
 </body>
+
 </html>
