--- a/link.html
+++ b/link.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>AIロボティクス</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
-<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/openclose.js"></script>
-<script src="js/fixmenu_pagetop.js"></script>
-<!--[if lt IE 9]>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>エーアイロボティクス</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="ここにサイト説明を入れます">
+	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/openclose.js"></script>
+	<script src="js/fixmenu_pagetop.js"></script>
+	<!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
@@ -18,101 +19,103 @@
 
 <body>
 
-<div id="container">
+	<div id="container">
 
-<header>
-<h1 id="logo"><a href="index.html"><img src="images/ai_logo.png" alt="SAMPLE WEB SITE"></a></h1>
-<aside id="mainimg">
-<img src="images/3.jpg" alt="">
-</aside>
-</header>
+		<header>
+			<h1 id="logo"><a href="index.html"><img src="images/ai_logo.png" alt="SAMPLE WEB SITE"></a></h1>
+			<aside id="mainimg">
+				<img src="images/3.jpg" alt="">
+			</aside>
+		</header>
 
-<div id="contents">
+		<div id="contents">
 
-<div id="main">
+			<div id="main">
 
-<section>
+				<section>
 
-<h2>リンク</h2>
+					<h2>リンク</h2>
 
-<table class="ta1">
-<caption>X（旧Twitter）</caption>
-<tr>
-<th><a href="https://twitter.com/vonaro131605"><img src="images/1.jpg" alt=""><br>
-旧BONARO</a></th>
-<td>今は運営しておりません。</td>
-</tr>
-<tr>
-<th><a href="https://x.com/AIRobotics2024?t=QoK_lAdc2GKObeGoOHlmrw&s=09"><img src="images/2.jpg" alt=""><br>
-エーアイロボティクス</a></th>
-<td><img src="images/X_qr.png"></td>
-</tr>
-<!-- <tr>
+					<table class="ta1">
+						<caption>X（旧Twitter）</caption>
+						<tr>
+							<th><a href="https://twitter.com/vonaro131605"><img src="images/1.jpg" alt=""><br>
+									旧BONARO</a></th>
+							<td>今は運営しておりません。</td>
+						</tr>
+						<tr>
+							<th><a href="https://x.com/AIRobotics2024?t=QoK_lAdc2GKObeGoOHlmrw&s=09"><img
+										src="images/2.jpg" alt=""><br>
+									エーアイロボティクス</a></th>
+							<td><img src="images/X_qr.png"></td>
+						</tr>
+						<!-- <tr>
 <th><a href="#"><img src="images/3.jpg" alt=""><br>
 サイト名</a></th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
 </tr> -->
-</table>
+					</table>
 
-</section>
+				</section>
 
-</div>
-<!--/#main-->
+			</div>
+			<!--/#main-->
 
-<div id="sub">
+			<div id="sub">
 
-<!--PC用（801px以上端末）メニュー-->
-<nav id="menubar">
-<h2>Contents</h2>
-<ul>
-<li><a href="index.html">HOME</a></li>
-<li><a href="about.html">ABOUT</a></li>
-<li><a href="gallery.html">GALLERY</a></li>
-<li><a href="link.html">LINK</a></li>
-</ul>
-</nav>
+				<!--PC用（801px以上端末）メニュー-->
+				<nav id="menubar">
+					<h2>Contents</h2>
+					<ul>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="about.html">ABOUT</a></li>
+						<li><a href="gallery.html">GALLERY</a></li>
+						<li><a href="link.html">LINK</a></li>
+					</ul>
+				</nav>
 
-<p><a href="#"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
-<a href="#"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a></p>
-<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
-<a href="about.html#banner">詳しい説明はこちら。</a></p>
+				<p><a href="#"><img src="images/banner1.jpg" alt="採用情報" class="pc"></a>
+					<a href="#"><img src="images/banner1_sh.jpg" alt="採用情報" class="sh"></a></p>
+				<p>上のバナー画像は、801px以上の端末と800px以下とで画像２種類が切り替わります。<br>
+					<a href="about.html#banner">詳しい説明はこちら。</a></p>
 
-</div>
-<!--/#sub-->
+			</div>
+			<!--/#sub-->
 
-</div>
-<!--/#contents-->
+		</div>
+		<!--/#contents-->
 
-</div>
-<!--/#container-->
+	</div>
+	<!--/#container-->
 
-<footer>
-<small>Copyright&copy; <a href="index.html">SAMPLE WEB SITE</a> All Rights Reserved.</small>
-<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
-</footer>
+	<footer>
+		<small>Copyright&copy; <a href="index.html">SAMPLE WEB SITE</a> All Rights Reserved.</small>
+		<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+	</footer>
 
-<!--小さな端末用（800px以下端末）メニュー-->
-<nav id="menubar-s">
-<ul>
-<li><a href="index.html">HOME</a></li>
-<li><a href="about.html">ABOUT</a></li>
-<li><a href="gallery.html">GALLERY</a></li>
-<li><a href="link.html">LINK</a></li>
-</ul>
-</nav>
+	<!--小さな端末用（800px以下端末）メニュー-->
+	<nav id="menubar-s">
+		<ul>
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="gallery.html">GALLERY</a></li>
+			<li><a href="link.html">LINK</a></li>
+		</ul>
+	</nav>
 
-<!--ページの上部に戻る「↑」ボタン-->
-<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
+	<!--ページの上部に戻る「↑」ボタン-->
+	<p class="nav-fix-pos-pagetop"><a href="#">↑</a></p>
 
-<!--メニュー開閉ボタン-->
-<div id="menubar_hdr" class="close"></div>
+	<!--メニュー開閉ボタン-->
+	<div id="menubar_hdr" class="close"></div>
 
-<!--メニューの開閉処理条件設定　800px以下-->
-<script>
-if (OCwindowWidth() <= 800) {
-	open_close("menubar_hdr", "menubar-s");
-}
-</script>
+	<!--メニューの開閉処理条件設定　800px以下-->
+	<script>
+		if (OCwindowWidth() <= 800) {
+			open_close("menubar_hdr", "menubar-s");
+		}
+	</script>
 
 </body>
+
 </html>
