--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>エーアイロボティクス</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="ここにサイト説明を入れます">
-	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<meta name="keywords" content="夢プロジェクト,キーワード２,キーワード３,キーワード４,キーワード５">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/openclose.js"></script>
 	<script src="js/fixmenu_pagetop.js"></script>
@@ -62,8 +62,8 @@
 				</section>
 
 				<section>
-
-					<h2>テンプレートのご利用前に必ずお読み下さい</h2>
+					<!--変更前
+				<h2>テンプレートのご利用前に必ずお読み下さい</h2>
 
 					<h3>利用規約のご案内</h3>
 					<p>このテンプレートは、<a href="https://template-party.com/">Template
@@ -83,6 +83,32 @@
 
 					<h3>当テンプレートの詳しい使い方は</h3>
 					<p><a href="about.html">こちらをご覧下さい。</a></p>
+				-->
+
+					<h2>「エーアイロボティクス」について</h2>
+
+					<h3>エーアイロボティクスとは</h3>
+					<p>「エーアイロボティクス」は"AIとロボットを組み合わせた生活を楽しくする物の開発"を行っている夢プロジェクトの一つです。</p>
+					<h3>活動内容</h3>
+					<ul>
+						<li>ロボット大型・小型の制作</li>
+						<li>ロボット小型の連携</li>
+						<li>ロボットの改良</li>
+						<li>ロボット小型の製作体験会</li>
+						<li>その他、大学活性AIの開発</li>
+						<p>詳しくは<a href="gallery.html">こちら</a>をクリック</p>
+					</ul>
+					<h3>予定表</h3>
+
+					<h3>活動実績</h3>
+					<ul>
+						<li></li>
+					</ul>
+					<!--
+					<h3>Twitter開設</h3>
+					<p>Twitterを開設しています。</p>
+					<p>Twitterへのリンク等を貼りつける</p>
+					-->
 
 				</section>
 
